consul-gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: consul
  labels:
    app: consul-api-gateway
spec:
  controllerName: hashicorp.com/consul-api-gateway-controller
  description: "Consul API Gateway with mTLS support"
  
  parametersRef:
    group: api-gateway.consul.hashicorp.com
    kind: GatewayClassConfig
    name: consul-gateway-class-config
